# pnl-calculator-c

./: CMakeLists.txt  README.md
data/: input1.csv  input2.csv
src/: calculator.cpp  calculator.h  main.cpp
